<resources>
    <string name="app_name">equacao</string>
    <string name="hello_world">Equação do 2º grau</string>
    <string name="action_settings">Settings</string>
    <string name="label1">A</string>
    <string name="label2">B</string>
    <string name="label3">C</string>
    <string name="button">Calcular</string>
    <string name="title_activity_display_message">DisplayMessage</string>
</resources>
